# splatstream

./: .clang-format  .gitignore  CMakeLists.txt  DETAILS.md  README.md  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml  test_cibuildwheel.yml
bench/: README.md  bench.py  common.py  draw_gsplat.py  draw_splatstream.py  requirements.txt
bench/scene/: dataset_readers.py
binding/: CMakeLists.txt  binding.cc  pygs.cc  pygs_test.cc  pyproject.toml
binding/pygs/: __init__.py  buffer.py  buffer_torch.py  module.py  renderer.py  singleton_module.py  wrapper.py
binding/splatstream/: __init__.py  engine.py  rendered_image.py  renderer.py  rendering_task.py  singleton_engine.py  singleton_renderer.py
cmake/: add_shader.cmake
examples/: CMakeLists.txt  pygs_exe.cc  viewer.cc  vkgs_exe.cc
examples/MVP/: .gitignore  README.md  dataset.py  download_and_undistort.py  model.py  prope_custom.py  requirements.txt  transformer.py  utils.py  visualize.py
examples/MVP/configs/: visualize.yaml
examples/MVP/data/: dl3dv_fold_8_kmeans_input_idx_visualize.json  dl3dv_visualize.txt
examples/ml-sharp/: README.md  visualize.py
include/vkgs/: buffer.h  export.h  module.h  object.h  vkgs.h
src/api/: CMakeLists.txt
src/api/include/vkgs/: buffer.h  draw_result.h  export_api.h  gaussian_splats.h  module.h  rendered_image.h  renderer.h  rendering_task.h  vkgs.h
src/api/src/: buffer.cc  buffer_impl.cc  buffer_impl.h  engine.cc  gaussian_splats.cc  gaussian_splats_impl.cc  gaussian_splats_impl.h  module.cc  module_impl.cc  module_impl.h  rendered_image.cc  rendered_image_impl.cc  rendered_image_impl.h  renderer.cc  renderer_impl.cc  renderer_impl.h  rendering_task.cc
src/common/: CMakeLists.txt
src/common/include/vkgs/common/: handle.h  round.h  sampled_moving_window.h  shared_accessor.h  timer.h
src/core/: CMakeLists.txt
src/core/include/vkgs/core/: buffer.h  compute_storage.h  core.h  draw_options.h  draw_result.h  export_api.h  gaussian_splats.h  module.h  parser.h  rendered_image.h  renderer.h  rendering_task.h  screen_splat_options.h  screen_splats.h  stats.h
src/core/include/vkgs/core/details/: compute_storage.h  graphics_storage.h  sorter.h
src/core/shader/: inverse_index.comp  parse_data.comp  parse_ply.comp  projection.comp  rank.comp  splat.frag  splat.vert  splat_background.frag  splat_color.frag  splat_color.vert  splat_depth.frag  splat_depth.vert
src/core/src/: buffer.cc  buffer.h  command.cc  command.h  command_pool.cc  command_pool.h  compute_pipeline.cc  compute_pipeline.h  compute_storage.cc  compute_storage.h  core.cc  descriptor_set_layout.cc  descriptor_set_layout.h  device.cc  device.h  fence.cc  fence.h  fence_pool.cc  fence_pool.h  gaussian_splats.cc  graphics_pipeline.cc  graphics_pipeline.h  graphics_storage.cc  graphics_storage.h  image.cc  image.h  module.cc  object.h  parser.cc  pipeline_layout.cc  pipeline_layout.h  queue.cc  queue.h  rendered_image.cc  renderer.cc  rendering_task.cc  screen_splats.cc  semaphore.cc  semaphore.h  semaphore_pool.cc  (+10 more)
src/core/src/details/: compute_storage.cc  compute_storage.h  graphics_storage.cc  graphics_storage.h  sorter.cc
src/gpu/: CMakeLists.txt
src/gpu/include/vkgs/gpu/: buffer.h  command.h  command_pool.h  compute_pipeline.h  device.h  export_api.h  fence.h  fence_pool.h  fwd.h  gpu.h  graphics_pipeline.h  graphics_pipeline_pool.h  image.h  object.h  pipeline_layout.h  queue.h  queue_submission.h  queue_task.h  sampler.h  semaphore.h  semaphore_pool.h  swapchain.h  task.h  task_monitor.h  timer.h
src/gpu/include/vkgs/gpu/cmd/: barrier.h  pipeline.h  queue_submission.h
src/gpu/include/vkgs/gpu/details/: command.h  command_pool.h  fence.h  fence_pool.h  graphics_pipeline_pool.h  semaphore_pool.h  task_monitor.h
src/gpu/src/: buffer.cc  command.cc  command.h  command_pool.cc  command_pool.h  compute_pipeline.cc  device.cc  fence.cc  fence.h  fence_pool.cc  fence_pool.h  gpu.cc  graphics_pipeline.cc  graphics_pipeline_pool.cc  graphics_pipeline_pool.h  image.cc  object.cc  pipeline_layout.cc  queue.cc  queue_submission.cc  queue_task.cc  sampler.cc  semaphore.cc  semaphore_pool.cc  semaphore_pool.h  swapchain.cc  task.cc  task.h  task_monitor.cc  task_monitor.h  timer.cc
src/gpu/src/cmd/: barrier.cc  pipeline.cc  queue_submission.cc
src/gpu/src/details/: command.cc  command.h  command_pool.cc  command_pool.h  fence.cc  fence.h  fence_pool.cc  fence_pool.h  graphics_pipeline_pool.cc  graphics_pipeline_pool.h  semaphore_pool.cc  semaphore_pool.h  task_monitor.cc  task_monitor.h
src/viewer/: CMakeLists.txt
src/viewer/include/vkgs/viewer/: camera_params.h  export_api.h  storage.h  viewer.h
src/viewer/shader/: blend.frag  blend.vert  blend_color.frag  blend_depth.frag  color.frag  color.vert  depth.frag  depth.vert
src/viewer/src/: camera.cc  camera.h  context.cc  context.h  imgui_texture.cc  imgui_texture.h  pose.h  pose_spline.cc  pose_spline.h  storage.cc  storage.h  util.cc  util.h  viewer.cc  viewer_base.cc  viewer_base.h  viewer_impl.cc  viewer_impl.h
src/viewer/src/fonts/: roboto_medium.h  roboto_regular.h
src/vkgs/: CMakeLists.txt  buffer.cc  module.cc  vkgs.cc
src/vkgs/impl/: buffer_impl.cc  buffer_impl.h  module_impl.cc  module_impl.h
src/vkgs/include/vkgs/: camera_params.h  draw_options.h  engine.h  export_api.h  gaussian_splats.h  rendering_task.h  vkgs.h
src/vkgs/src/: engine.cc  gaussian_splats.cc  rendering_task.cc  vkgs.cc
test/: test_colmap.py  test_preloaded.py  test_pretrained.py  test_pygs.py  test_random.py  test_random_large.py  test_sh.py  test_viewer.py
test/scene/: dataset_readers.py
