[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "splatstream"
version = "0.0.5"
description = "Streamlined 3dgs rendering"
authors = [
    {name = "Jaesung Park", email = "jaesung.cs@gmail.com"}
]
urls = {Homepage = "https://github.com/jaesung-cs/splatstream"}
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
wheel.packages = ["splatstream"]
