[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "splatstream"
version = "0.1.3"
description = "Streamlined 3dgs rendering"
authors = [
    {name = "Jaesung Park", email = "jaesung.cs@gmail.com"}
]
urls = {Homepage = "https://github.com/jaesung-cs/splatstream"}
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
]

[tool.scikit-build]
build-dir = ".skbuild"
cmake.source-dir = "."
cmake.build-type = "Release"
wheel.packages = ["splatstream"]

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y wayland-devel libxkbcommon-devel libXcursor-devel libXi-devel libXinerama-devel libXrandr-devel"
]
